@startuml

title __FXGUI's Class Diagram__\n

  namespace Clinic.Client {
    namespace fxGUI {
      class Clinic.Client.fxGUI.FxGUI {
          {static} + main()
          + start()
      }
    }
  }
  

  namespace Clinic.Client {
    namespace fxGUI {
      class Clinic.Client.fxGUI.util.Session {
          - dataObject : Object
          + Session()
          + getDataObject()
          + setDataObject()
      }
    }
  }
  

  namespace Clinic.Client {
    namespace fxGUI {
      abstract class Clinic.Client.fxGUI.controllers.baseController {
          + root : Parent
          + stage : Stage
          {abstract} + initWithData()
          + switchScene()
          + switchScene()
      }
    }
  }
  

  namespace Clinic.Client {
    namespace fxGUI {
      class Clinic.Client.fxGUI.controllers.loginController {
          + loginPage : AnchorPane
          + output : Label
          + passField : TextField
          + userField : TextField
          - root : Parent
          - stage : Stage
          + initWithData()
          + switchScene()
          + tryLogin()
      }
    }
  }
  

  namespace Clinic.Client {
    namespace fxGUI {
      class Clinic.Client.fxGUI.controllers.doctorHomePageController {
          + data : String
          + output : Label
          + doOutput()
          + initWithData()
          + logout()
      }
    }
  }
  

  Clinic.Client.fxGUI.FxGUI -up-|> javafx.application.Application
  Clinic.Client.fxGUI.util.Session o-- Clinic.Client.ClientSecretary : client
  Clinic.Client.fxGUI.util.Session o-- Clinic.Core.Token : token
  Clinic.Client.fxGUI.controllers.loginController -up-|> Clinic.Client.fxGUI.controllers.baseController
  Clinic.Client.fxGUI.controllers.loginController o-- Clinic.Client.fxGUI.util.Session : session
  Clinic.Client.fxGUI.controllers.doctorHomePageController -up-|> Clinic.Client.fxGUI.controllers.baseController


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
